refactor project and some fixes for run on macos

--- a/.dockerignore
+++ b/.dockerignore
@@ -3,7 +3,7 @@
 .idea/
 .vs/
 
-#
+# Avoid deployment scripts
 deployment/
 
 # Avoid docker folder with samples of other docker files
@@ -25,14 +25,14 @@ target/
 .env
 .env_variables
 
-#
+# Avoid docker files
 .dockerignore
 docker-compose.yaml
 Dockerfile
 
-#
+# Avoid git files
 .git/
-.gitgionre
+.gitignore
 
 #
 LICENSE
