--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.3.4</version>
+		<version>3.5.0</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.demo.task.tracker</groupId>
@@ -115,7 +115,7 @@
 			  </plugin-->
 
 		</plugins>
-		<finalName>task-tracker-rest-${project.version}</finalName>
+		<finalName>${artifactId}</finalName>
 	</build>
 
 </project>
