--- a/docker/Dockerfile.semeru-focal
+++ b/docker/Dockerfile.semeru-focal
@@ -1,21 +1,21 @@
-FROM ibm-semeru-runtimes:open-17-jdk-centos7 as base
+FROM ibm-semeru-runtimes:open-17-jdk-centos7 AS base
 WORKDIR /app
 COPY .mvn/ .mvn
 COPY mvnw pom.xml ./
 RUN ./mvnw dependency:resolve
 COPY src ./src
 
-FROM base as test
+FROM base AS test
 CMD ["./mvnw", "test"]
 
-FROM base as development
+FROM base AS development
 CMD ["./mvnw", "spring-boot:run"]
 
 
-FROM base as build
+FROM base AS build
 RUN ./mvnw package
 
-FROM ibm-semeru-runtimes:open-17-jre-centos7 as production
+FROM ibm-semeru-runtimes:open-17-jre-centos7 AS production
 RUN  adduser spring  
 USER spring:spring
 EXPOSE 8080
