--- a/.github/workflows/jfrog-demo.yml
+++ b/.github/workflows/jfrog-demo.yml
@@ -13,7 +13,7 @@ env:
 
 jobs:
   # Job 1: Build jar, Docker Image and execute Unit Tests
-  build_and_test:
+  test_and_build:
     runs-on: ubuntu-latest
     outputs:
       jaf_file_name: ${{ steps.get-jar-name.outputs.jar_name }}
@@ -49,7 +49,15 @@ jobs:
         - name: Execute Unit Test
           run: mvn test
           env:
-            MAVEN_OPTS:  -Dmaven.wagon.http.pool=false -Dmaven.wagon.http.retryHandler.count=3
+            MAVEN_OPTS: -Dmaven.wagon.http.pool=false -Dmaven.wagon.http.retryHandler.count=3
+
+        - name: Upload JAR Artifact
+          uses: actions/upload-artifact@v4
+          if: ${{ success()}}
+          with:
+            name: ${{ env.PROJECT_NAME }}-jar
+            path: target/${{ steps.get-jar-name.outputs.jar_name }}
+            retention-days: 7    
 
         - name: Set up Docker Buildx
           uses: docker/setup-buildx-action@v3
@@ -64,19 +72,13 @@ jobs:
             tags: ${{ env.PROJECT_NAME }}:${{ github.sha }}
           
 
-        #- name: Export Docker Image to Tar (for subsequent jobs)
-        #  run: docker save $ {{ env.PROJECT_NAME }}:$ {{ github.sha}} -o $ {{ env.PROJECT_NAME}}.tar
+        - name: Export Docker Image to Tar (for subsequent jobs)
+          run: docker save ${{ env.PROJECT_NAME }}:${{ github.sha}} -o ${{ env.PROJECT_NAME}}.tar
 
-        - name: Upload JAR Artifact
+        - name: Upload Docker Image Tarball Artifact
           uses: actions/upload-artifact@v4
+          if: ${{ success() }}
           with:
-            name: $ {{ env.PROJECT_NAME}}-jar
-            path: target/${{ steps.get-jar-name.outputs.jar_name }}
+            name: $ {{ env.PROJECT_NAME }}-docker-image
+            path: ${{ env.PROJECT_NAME }}.tar
             retention-days: 7
-
-        #- name: Upload Docker Image Tarball Artifact
-        #  uses: actions/upload-artifact@v4
-        #  with:
-        #    name: $ {{ env.PROJECT_NAME }}-docker-image
-        #    path: .
-        #    retention-days: 7
