--- a/.github/workflows/jfrog-demo.yml
+++ b/.github/workflows/jfrog-demo.yml
@@ -83,6 +83,41 @@ jobs:
           uses: actions/upload-artifact@v4
           if: ${{ success() }}
           with:
-            name: $ {{ env.PROJECT_NAME }}-docker-image
+            name: ${{ env.PROJECT_NAME }}-docker-image
             path: ${{ env.PROJECT_NAME }}.tar
             retention-days: 7
+
+  # Job 2: Deploy Artifacts (Runs only after all prior jobs succed)
+  store_artifacts:
+    runs-on: ubuntu-latest
+    needs:  #This job depends on ALL preceding funcional groups
+      - test_and_build
+
+    steps:
+      - name: Download JAR Artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: ${{ env.PROJECT_NAME }}-jar
+          path: ./downloaded-artifacts/jar/
+
+      - name: Download Docker Image Tarball Artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: ${{ env.PROJECT_NAME }}-docker-image
+          path: ./downloaded-artifacts/docker-image/
+
+      - name: List Downloaded Artifacts
+        run: |
+          echo "Downloaded JAR files:"
+          ls ./downloaded-artifacts/jar/
+          echo "Downloaded Docker image tarballs:"
+          ls ./downloaded-artifacts/docker-image/
+
+      - name: Log in to JFrog Artifactory Docker Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ${{ secrets.JFROG_DEMO_REGISTRY }}
+          username: ${{ secrets.JFROG_DEMO_USERNAME }}
+          password: ${{ secrets.JFROG_DEMO_PASSWORD }}
+
+          
