--- a/.github/workflows/jfrog-demo.yml
+++ b/.github/workflows/jfrog-demo.yml
@@ -9,7 +9,9 @@ env:
   # Define common environment variables
   JAVA_VERSION: 17
   PROJECT_NAME: 'springboot-task-tracker-h2-api'
-  DOCKERFILE_PATH: 'docker/Dockerfile'          
+  DOCKERFILE_PATH: 'docker/Dockerfile'
+  JFROG_DOCKER_REPO: 'spring-demo-docker-appimages'
+  JFROG_MAVEN_REPO: 'spring-maven-apps-repository'          
 
 jobs:
   # Job 1: Build jar, Docker Image and execute Unit Tests
@@ -17,7 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       jaf_file_name: ${{ steps.get-jar-name.outputs.jar_name }}
-      #docker_image_tag: ${{ steps.build-image.outputs.tag }}
+      docker_image_tag: ${{ steps.get-tag-name.outputs.docker_tag }}
       project_version: ${{ steps.get-version.outputs.project_version }}
 
     steps:
@@ -72,6 +74,14 @@ jobs:
             load: true # Load the image into Docker
             tags: ${{ env.PROJECT_NAME }}:${{ github.sha }}
 
+        - name: Get docker tag name
+          id: get-tag-name
+          run: |
+            TAG_NAME="${{ env.PROJECT_NAME }}:${{ github.sha }}"
+            echo "docker_tag=$TAG_NAME" >> "$GITHUB_OUTPUT"
+            echo "TAG_NAME is $TAG_NAME"
+
+
         - name: List Docker Images
           run: docker images    
           
@@ -121,3 +131,14 @@ jobs:
           password: ${{ secrets.JFROG_DEMO_PASSWORD }}
 
           
+      - name: Load Docker Image
+        run: |
+          docker load -i ./downloaded-artifacts/docker-image/$ {{ env.PROJECT_NAME}}.tar
+          # Re-tag the image with the full JFrog repository path
+          docker tag ${{ env.PROJECT_NAME }}:${{ needs.test_and_build.outputs.docker_image_tag }} ${{ secrets.JFROG_DEMO_REGISTRY }}/${{ env.JFROG_DOCKER_REPO}}/${{ env.PROJECT_NAME}}:${{ needs.test_and_build.outputs.docker_image_tag }}
+          docker tag ${{ env.PROJECT_NAME }}:${{ needs.test_and_build.outputs.docker_image_tag }} ${{ secrets.JFROG_DEMO_REGISTRY }}/${{ env.JFROG_DOCKER_REPO}}/${{ env.PROJECT_NAME}}:latest
+
+      - name: Push Docker Image to JFrog Artifactory
+        run: |
+          docker push ${{ secrets.JFROG_DEMO_REGISTRY }}/${{ env.JFROG_DOCKER_REPO}}/${{ env.PROJECT_NAME}}:${{ needs.test_and_build.outputs.docker_image_tag }}   
+          docker push ${{ secrets.JFROG_DEMO_REGISTRY }}/${{ env.JFROG_DOCKER_REPO}}/${{ env.PROJECT_NAME}}:latest
