--- a/.github/workflows/jfrog-demo.yml
+++ b/.github/workflows/jfrog-demo.yml
@@ -131,12 +131,12 @@ jobs:
           password: ${{ secrets.JFROG_DEMO_PASSWORD }}
 
           
-      - name: Load Docker Image
+      - name: Load Docker Image and Tag
         run: |
           docker load -i ./downloaded-artifacts/docker-image/${{ env.PROJECT_NAME}}.tar
           # Re-tag the image with the full JFrog repository path
           docker images
-          #docker tag ${{ env.PROJECT_NAME }}:${{ needs.test_and_build.outputs.docker_image_tag }} ${{ secrets.JFROG_DEMO_REGISTRY }}/${{ env.JFROG_DOCKER_REPO}}/${{ env.PROJECT_NAME}}:${{ needs.test_and_build.outputs.docker_image_tag }}
+          docker tag ${{ env.PROJECT_NAME }}:${{ needs.test_and_build.outputs.docker_image_tag }} ${{ secrets.JFROG_DEMO_REGISTRY }}/${{ env.JFROG_DOCKER_REPO}}/${{ env.PROJECT_NAME}}:${{ needs.test_and_build.outputs.docker_image_tag }}
           #docker tag ${{ env.PROJECT_NAME }}:${{ needs.test_and_build.outputs.docker_image_tag }} ${{ secrets.JFROG_DEMO_REGISTRY }}/${{ env.JFROG_DOCKER_REPO}}/${{ env.PROJECT_NAME}}:latest
 
       #- name: Push Docker Image to JFrog Artifactory
