--- a/.github/workflows/jfrog-demo.yml
+++ b/.github/workflows/jfrog-demo.yml
@@ -136,10 +136,16 @@ jobs:
           docker load -i ./downloaded-artifacts/docker-image/${{ env.PROJECT_NAME}}.tar
           # Re-tag the image with the full JFrog repository path
           docker images
+          echo "PROJECT NAME ${{ env.PROJECT_NAME }}"
+          echo "IMAGE TAG ${{ needs.test_and_build.outputs.docker_image_tag }}"
+          IMAGE_NAME="${{ env.PROJECT_NAME }}:${{ needs.test_and_build.outputs.docker_image_tag }}"
+          echo "IMAGE_NAME is $IMAGE_NAME"
+          
+
           docker tag ${{ env.PROJECT_NAME }}:${{ needs.test_and_build.outputs.docker_image_tag }} ${{ secrets.JFROG_DEMO_REGISTRY }}/${{ env.JFROG_DOCKER_REPO}}/${{ env.PROJECT_NAME}}:${{ needs.test_and_build.outputs.docker_image_tag }}
-          #docker tag ${{ env.PROJECT_NAME }}:${{ needs.test_and_build.outputs.docker_image_tag }} ${{ secrets.JFROG_DEMO_REGISTRY }}/${{ env.JFROG_DOCKER_REPO}}/${{ env.PROJECT_NAME}}:latest
+          #docker tag $ {{ env.PROJECT_NAME }}:$ {{ needs.test_and_build.outputs.docker_image_tag }} $ {{ secrets.JFROG_DEMO_REGISTRY }}/$ {{ env.JFROG_DOCKER_REPO}}/$ {{ env.PROJECT_NAME}}:latest
 
       #- name: Push Docker Image to JFrog Artifactory
       #  run: |
-      #    docker push ${{ secrets.JFROG_DEMO_REGISTRY }}/${{ env.JFROG_DOCKER_REPO}}/${{ env.PROJECT_NAME}}:${{ needs.test_and_build.outputs.docker_image_tag }}   
-      #    docker push ${{ secrets.JFROG_DEMO_REGISTRY }}/${{ env.JFROG_DOCKER_REPO}}/${{ env.PROJECT_NAME}}:latest
+      #    docker push $ {{ secrets.JFROG_DEMO_REGISTRY }}/$ {{ env.JFROG_DOCKER_REPO}}/$ {{ env.PROJECT_NAME}}:$ {{ needs.test_and_build.outputs.docker_image_tag }}   
+      #    docker push $ {{ secrets.JFROG_DEMO_REGISTRY }}/$ {{ env.JFROG_DOCKER_REPO}}/$ {{ env.PROJECT_NAME}}:latest
