--- a/.github/workflows/jfrog-demo.yml
+++ b/.github/workflows/jfrog-demo.yml
@@ -145,3 +145,12 @@ jobs:
         run: |
           docker push ${{ secrets.JFROG_DEMO_REGISTRY }}/${{ env.JFROG_DOCKER_REPO}}/${{ needs.test_and_build.outputs.docker_image_tag }}   
           docker push ${{ secrets.JFROG_DEMO_REGISTRY }}/${{ env.JFROG_DOCKER_REPO}}/${{ env.PROJECT_NAME}}:latest
+
+      - name: Upload JAR to JFrog Artifactory
+        run: |
+          # Get teh full path to the downloade JAR File
+          JAR_PATH="./downloaded-artifacts/jar/${{ needs.test_and_build.outputs.jaf_file_name}}"
+          PROJECT_VERSION="${{ needs.test_and_build.outputs.project_version }}"
+
+          # Use curl to upload Artifactory's Maven repository
+          curl -u ${{ secrets.JFROG_DEMO_USERNAME }}:${{ secrets.JFROG_DEMO_PASSWORD }} -X PUT "${{ secrets.JFROG_DEMO_URL }}/${{ env.JFROG_MAVEN_REPO }}/${{ env.PROJECT_NAME}}/$PROJECT_VERSION/${{ needs.test_and_build.outputs.jaf_file_name}}" --upload-file "$JAR_PATH"
